--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div id="tracker" style="display: none">
-            <button id="start" class="btn btn-success">Start</button>
+            <button id="start" class="btn btn-primary">Start</button>
             <button id="stop" class="btn btn-danger" style="display: none">Stop</button>
             <textarea name="tracker-comment" class="form-control mb-2" id="tracker-comment" cols="30" rows="1" placeholder="Comment"></textarea>
             <h3>Screenshots for issue <span id="current-issue"></span>
